# pyELSI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
cpp/: lapack_backend.cpp  lapack_backend.hpp  pyelsi_module.cpp
docs/: index.md  installation.md  troubleshooting.md
docs/api/: density_matrix.md  eigh.md  index.md
src/pyelsi/: __init__.py  _errors.py  _runtime.py  _typing.py  api.py
src/pyelsi/_core/: __init__.py
tests/: test_chase_eigh.py  test_complex_dense.py  test_density_matrix.py  test_dm_solvers.py  test_eigh_dense.py  test_mpi_smoke.py  test_scaling_benchmark.py  test_sips_eigh.py  test_strong_scaling.py
